--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,7 @@
    ======================================== */
 @import "styles/components/button.scss";
 @import "styles/components/alert.scss";
+@import "styles/components/datetimepicker.scss";
 
 /* ========================================
    BASE
