--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -44,7 +44,9 @@
             <path d="M13 10V3L4 14h7v7l9-11h-7z" />
           </svg>
         </div>
-        <h2 class="text-2xl font-bold text-gray-800">Tauro-Template Dashboard</h2>
+        <h2 class="text-2xl font-bold text-gray-800">
+          Tauro-Template Dashboard
+        </h2>
       </div>
 
       <!-- Form Card -->
@@ -88,13 +90,7 @@
 
           <!-- Remember & Forgot -->
           <div class="flex items-center justify-between mt-2">
-            <label class="flex items-center">
-              <input
-                type="checkbox"
-                class="w-4 h-4 text-primary-600 border-gray-300 rounded focus:ring-primary-500"
-              />
-              <span class="ml-2 text-sm text-gray-600">Recordarme</span>
-            </label>
+            <app-checkbox label="Recordarme"></app-checkbox>
             <a
               href="#"
               class="text-sm text-primary-600 hover:text-primary-700 font-medium"
