Agregando lógica para detectar los Validator.required de los compoentes Input, Password-input, text-area.

--- a/src/app/shared/components/form/password-input/password-input.component.html
+++ b/src/app/shared/components/form/password-input/password-input.component.html
@@ -1,6 +1,15 @@
 <div class="flex flex-col gap-2">
-  <label class="text-sm font-medium text-gray-700">
+  <label
+    [class]="
+      isInvalid
+        ? 'text-sm font-medium text-red-600'
+        : 'text-sm font-medium text-gray-700'
+    "
+  >
     {{ label() }}
+    @if (isRequired) {
+      <span class="text-red-500">*</span>
+    }
   </label>
 
   <div class="relative">
@@ -21,6 +30,7 @@
       (blur)="onTouched()"
       [class]="getInputClasses()"
       [placeholder]="placeholder()"
+      [style.transform]="'translateZ(0)'"
     />
 
     <!-- Botón toggle derecho -->
