--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -63,7 +63,7 @@
         }
 
         <!-- Form -->
-        <form (ngSubmit)="onSubmit()" [formGroup]="form" class="space-y-6">
+        <form (ngSubmit)="onSubmit()" [formGroup]="form" class="flex flex-col gap-2">
           <!-- Username Field -->
           <app-input
             label="Usuario"
@@ -100,7 +100,7 @@
           </div>
 
           <!-- Submit Button -->
-          <app-button [fullWidth]="true" [loading]="isLoading()" type="submit">
+          <app-button [fullWidth]="true" [loading]="isLoading()" type="submit" class="mt-3">
             @if (isLoading()) {
               Ingresando
             } @else {
